// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders background task error correctly 1`] = `
<NavBarNotif
  className="alert alert-danger"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "component_navigation.status.failed",
      }
    }
  />
</NavBarNotif>
`;

exports[`renders background task in progress info correctly 1`] = `
<NavBarNotif
  className="alert alert-info"
>
  <i
    className="spinner spacer-right text-bottom"
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "component_navigation.status.in_progress",
      }
    }
  />
</NavBarNotif>
`;

exports[`renders background task license info correctly 1`] = `
<NavBarNotif
  className="alert alert-danger"
>
  <span>
    Foo
  </span>
  <Link
    className="little-spacer-left"
    onlyActiveOnIndex={false}
    style={Object {}}
    to="/admin/extension/license/app"
  >
    license.component_navigation.button.LICENSING
    .
  </Link>
</NavBarNotif>
`;

exports[`renders background task pending info correctly 1`] = `
<NavBarNotif
  className="alert alert-info"
>
  <PendingIcon
    className="spacer-right"
  />
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "component_navigation.status.pending",
      }
    }
  />
</NavBarNotif>
`;
